--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,3 @@
----
-layout: default
----
 <article class="post">
   <header class="post-header">
     <h1 class="post-title">{{ page.title | escape }}</h1>
@@ -12,4 +9,7 @@ layout: default
   <div class="post-content">
     {{ content }}
   </div>
+
+  <a href="{{ "/projects/" | relative_url }}" class="back-to-projects">&larr; Zurück zu allen Projekten</a>
 </article>
+
