--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,9 @@
 <header class="site-header">
-    <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title }}</a>
+    <a class="site-title" href="{{ "/" | relative_url }}">Your Name</a>
     <nav class="site-nav">
-        <!-- Add navigation links here if needed, e.g., About page -->
-        <!-- <a href="/about/">About</a> -->
+        <a href="{{ "/" | relative_url }}">Home</a>
+        <a href="{{ "/projects/" | relative_url }}">Projects</a>
+        <a href="/#about-me">About Me</a>
     </nav>
 </header>
+
