--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
             <ul class="hidden md:flex items-center space-x-6">
                 <li>
 					<a href="{{ '/projects/' | relative_url }}" 
-					   class="nav-link text-slate-600 dark:text-cyan-500 hover:text-cyan-700 dark:hover:text-cyan-400 transition-colors {% if page.url == '/projects/' or page.collection == 'posts' %}active{% endif %}">
+					   class="nav-link text-slate-600 dark:text-cyan-500 hover:text-cyan-700 dark:hover:text-cyan-400 transition-colors {% if page.url == '/projects/' %}active{% endif %}">
 					   Projects
 					</a>
 				</li>
