--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,11 @@
 layout: default
 ---
 <section class="container mx-auto px-6 py-20">
-    
-    <article class="prose prose-lg lg:prose-xl max-w-4xl mx-auto">
-        <h1>{{ page.title }}</h1>
-        {{ content }}
-    </article>
+    <div class="container mx-auto rounded-xl shadow-lg p-6 md:p-10"style="background-color: var(--bg-post-pale)";>
+		<article class="prose prose-lg lg:prose-xl max-w-4xl mx-auto">
+			{{ content }}
+		</article>
+	</div>
 </section>
 
 <script type="module">
