--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
 					</a>
                 </div>
                 <div class="text-sm text-cyan-200 dark:text-cyan-400 text-center md:text-right">
-                    <p>&copy; 2025 {{ site.author }}. All Rights Reserved.</p>
+                    <p>&copy; {{ site.time | date: "%Y" }} {{ site.author }}</p>
                 </div>
             </div>
         </div>
